[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/screen/unlock_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/deathguy_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/sfx/click_r1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/error_click.wav" type="AudioStream" id=4]

[node name="UnlockScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.368627, 0.368627, 0.886275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -160.0
margin_right = 200.0
margin_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -28.0
margin_right = 70.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="HBoxContainer"]
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
text = "Y"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 60.0
margin_right = 80.0
margin_bottom = 56.0
rect_min_size = Vector2( 20, 0 )

[node name="NoButton" type="Button" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 140.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
text = "N"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.0

[node name="ErrorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0
[connection signal="pressed" from="HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
